[package]
name = "dcc-tiler"
version = "0.1.2"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/dcc-tiler"
description = "A library and CLI for counting / rendering tilings of various shapes"

[lib]
name = "dcc_tiler"
path = "src/lib.rs"

[[bin]]
name = "dcc_tiler_cli"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.9"
num = "0.4"
simplesvg = "0.4.0"
time = "0.3"
zip = "0.6"